# StereoChemDecoder

./: .gitignore  LICENSE  README.md  pyproject.toml
StereoChemDecoder/: __init__.py  decoder.py
StereochemDecoder/: __init__.py  decoder.py
tests/: smiles_dataset.csv  test_decoder.py  test_smiles_dataset.csv
