[project]
name = "StereoChemDecoder"
version = "0.1.0"
description = "A Python package to detect chiral centers and E/Z double bonds in SMILES strings."
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
authors = [
    {name = "Siva Sathyaseelan D N", email = "dnsiva.sathyaseelan.chy21@itbhu.ac.in"}
]
dependencies = [
    "rdkit>=2023.3.1"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"